discussion/kv_engine/170541/170541_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49512: Remove tasks from custom cpuPool queue on unregister

We just need to clean up the task but we currently do so by
running it, meaning that we must wait for other tasks to
complete first. Instead, remove the tasks from the queue and
tidy them up manually.

Change-Id: Id3f52a07d693d98510ab6b3f918ad4beb1b8721d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-02-14 12:50:46.000000000
Message: 
Uploaded patch set 14: Patch Set 13 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-14 14:13:50.000000000
Message: 
Patch Set 14: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15589/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10: error: "gmock/gmock.h" file not found [clang-diagnostic-error]
#include <gmock/gmock.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15589/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GMock.h:32:10:
error: "gmock/gmock.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15589/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43902/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0023/0093]: test producer stream request (backfill)...(239 ms) OK


99% tests passed, 1 tests failed out of 422

Total Test time (real) = 395.65 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43902/ )

Timeout of a CTest test 422/422 Test #294: ep_testsuite_dcp.full_eviction.magma ..........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43902/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17328/ : FAILURE

Compile error at [2022-02-14T14:12:35.476Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_durability_test.cc:5017:36:
error: ?nexusCouchstoreMagmaAllConfigValues? is not a member of ?STParameterizedBucketTest?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17328/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18367/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18367/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14431/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37016/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16406/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5237/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5298/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17637/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25736/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
